--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev:local": "node scripts/dev-server.js",
+    "dev:docker": "docker-compose -f docker-compose.dev.yml up --build",
+    "dev:ngrok": "concurrently \"npm run dev\" \"ngrok http 3000\"",
     "build": "tsc",
     "start": "node dist/server.js",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "db:view": "echo 'Use: sqlite3 ./data/crmwp-dev.db' ou instale DB Browser",
+    "setup": "node scripts/dev-server.js"
   },
   "keywords": ["crm", "whatsapp", "evolution-api", "easypanel"],
   "author": "CRMWP Team",
@@ -30,6 +35,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "concurrently": "^8.2.2"
   }
 } 
